kubernetes/gateway_api/es-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-proxy
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-proxy
  template:
    metadata:
      labels:
        app: es-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: es-proxy-conf
---
apiVersion: v1
kind: Service
metadata:
  name: es-proxy
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - port: 9200
      targetPort: 8080
  selector:
    app: es-proxy
